# ebook-langchain-rag

./: .gitignore  .gitmodules  README.md  main.py  md.py  mistune_converter.py  pyproject.toml  rag-python-project-claude.ai.md
_trash_/: 1-introducao.md  2-langchain.md
cap-20-source/: dynamic-rag-code.py  readme.md  requirements.txt
documents/: 1-introducao.md  10-rag-avancado.md  11-embbedings-vetorizacao.md  12-bancos-vetoriais.md  13-ollama-local.md  14-ollama-rag.md  15-HuggingFace-fundamentos.md  16-fine-tunning.md  17-rag-huggingface.md  18-deploy.md  19-melhores-praticas.md  2-introducao-langchain.md  20-projeto-pratico.md  21-modelos.md  22-final.md  3-blocos-langchain.md  4-memoria-langchain.md  5-agents-langchain.md  6-LangSmith-Testes-e-Depuracao-LLMs.md  7-LangGraph-Modelagem.md  8-Fundamentos-de-RAG.md  9-rag-basico.md
project-documents-knowledge/: plano-estudo-atualizado-6-a-19.md
