[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "markdown>=3.7",
    "mistune>=3.1.0",
    "pygments>=2.19.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-markdown>=3.7.0.20241204",
    "weasyprint>=63.1",
]
